[tool.poetry]
name = "mserv"
version = "0.8"
description = "A rough server manager for Minecraft"
authors = ["Quinton Jasper <dropatuningmetal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.2"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.3"
argh = "^0.26.2"
colorama = "^0.4.4"
click = "^7.1.2"
tqdm = "^4.54.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
